[project]
name = "band-dropbox-api-client"
version = "0.1.0"
description = "Terminal client for browsing my band's Dropbox storage with a multi-panel TUI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "dropbox>=11.36.0",
    "textual>=0.57.1",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage==7.8.2",
]

[tool.uv]
package = false
